# dpwright.github.com

./: .gitignore  .gitmodules  .travis.yml  CNAME  Makefile  README.md  _config.yml  archive.html  atom.xml  config.rb  default.nix  index.html  site.hs  sitemap.xml  stack.yaml  wright-access.cabal
blog/archives/: index.html
cats/: index.html  style.css
cats/maigo/: index.html
css/: default.css  syntax.css
dnd/: nihongo.html  style.css
gits-guts/: README.md  index.html  nochrome.html
gits-guts/css/: gits-guts.css  impress-demo.css
js/: dark.js
pages/: about.html  about.md  lambdaman.md
pages/about/: index.html
pages/lambdaman/: index.html
pending-posts/: 2013-10-01-cross-posting-between-hakyll-and-wordpress.lhs  2013-10-01-crossposting-between-hakyll-and-wordpress.html  2014-07-25-making-this-website-self-hosting-with-hakyll.lhs  2014-07-28-generating-this-website-part-x-atom-feed.html  2014-07-28-generating-this-website-part-x-crossposting.html  2014-07-28-generating-this-website-part-x-indexing.html  2014-08-16-generating-this-website-part-x-slideshows.html  2014-12-29-generating-this-website-part-x-elastic-tabstops.html  2015-01-01-happy-new-year.lhs  2015-01-01-明けましておめでとうございます.html  Crossposting.lhs  ElasticTabstops.lhs  Feed.lhs  Indexing.lhs  Main.lhs  OutdatedURLs.lhs  Posts.lhs  Slides.lhs
pending-posts/2013-10-01-crossposting-between-hakyll-and-wordpress/: index.html
pending-posts/2014-07-28-generating-this-website-part-x-atom-feed/: index.html
pending-posts/2014-07-28-generating-this-website-part-x-crossposting/: index.html
pending-posts/2014-07-28-generating-this-website-part-x-indexing/: index.html
pending-posts/2014-08-16-generating-this-website-part-x-slideshows/: index.html
pending-posts/2014-12-29-generating-this-website-part-x-elastic-tabstops/: index.html
pending-posts/2015-03-01-generating-this-website-part-x-outdated-urls/: index.html
posts/: 2012-04-10-ogre-include-tree.html  2012-04-10-ogre-include-tree.markdown  2012-04-10-visualising-include-trees.html  2012-04-10-visualising-include-trees.markdown  2012-04-16-using-ruby-to-send-mail-through-gmails-smtp-servers.html  2012-04-16-using-ruby-to-send-mail-through-gmails-smtp-servers.markdown  2012-04-17-invoking-ex-commands-on-a-subset-of-files.html  2012-04-17-invoking-ex-commands-on-a-subset-of-files.markdown  2012-04-24-accessing-networked-macs-from-freebsd.html  2012-04-24-accessing-networked-macs-from-freebsd.markdown  2012-04-27-programming-as-poetry-and-magic.html  2012-04-27-programming-as-poetry-and-magic.markdown  2012-05-03-how-to-extract-an-intention-revealing-name-using-vim.html  2012-05-03-how-to-extract-an-intention-revealing-name-using-vim.markdown  2012-05-03-how-to-extract-an-intentionrevealing-name-using-vim.html  2012-05-09-プログラマは詩人なのか、魔法使いなのか？.html  2012-05-09-プログラマは詩人なのか、魔法使いなのか？.markdown  2012-05-09-プログラマは詩人なのか魔法使いなのか.html  2012-05-11-file-specific-merge-resolution-in-git.html  2012-05-11-file-specific-merge-resolution-in-git.markdown  2012-05-11-filespecific-merge-resolution-in-git.html  2012-05-30-svn-post-commit-hook-email-file-owner.html  2012-05-30-svn-post-commit-hook-email-file-owner.markdown  2012-05-30-svn-postcommit-hook-email-file-owner.html  2012-06-05-git-alias-to-open-all-diffs-in-vim-tabs.html  2012-06-05-git-alias-to-open-all-diffs-in-vim-tabs.markdown  2012-06-25-bash-oneliner-watch-a-filesize.html  2012-06-25-bash-oneliner-watch-a-filesize.markdown  2012-06-26-git-alias-to-amend-old-commits.html  2012-06-26-git-alias-to-amend-old-commits.markdown  2012-08-01-git-alias-to-get-a-git-commit-sha1-from-an-svn-revision-number-in-git-svn.html  2012-08-01-git-alias-to-get-a-git-commit-sha1-from-an-svn-revision-number-in-git-svn.markdown  2012-08-01-git-alias-to-get-a-git-commit-sha1-from-an-svn-revision-number-in-gitsvn.html  2012-09-25-git-script-to-rebase-all-child-branches-following-a-command.html  2012-09-25-git-script-to-rebase-all-child-branches-following-a-command.markdown  2013-06-03-literate-haskell-script-to-create-a-new-hakyll-post.html  2013-06-03-literate-haskell-script-to-create-a-new-hakyll-post.lhs  2013-08-21-writing-a-tcp-server-in-haskell-using-proxies-and-pipes.html  2013-08-21-writing-a-tcp-server-in-haskell-using-proxies-and-pipes.lhs  2013-10-01-cross-posting-between-hakyll-and-wordpress.lhs  (+53 more)
posts/2012-04-10-ogre-include-tree/: index.html
posts/2012-04-10-visualising-include-trees/: index.html
posts/2012-04-16-using-ruby-to-send-mail-through-gmails-smtp-servers/: index.html
posts/2012-04-17-invoking-ex-commands-on-a-subset-of-files/: index.html
posts/2012-04-24-accessing-networked-macs-from-freebsd/: index.html
posts/2012-04-27-programming-as-poetry-and-magic/: index.html
posts/2012-05-03-how-to-extract-an-intentionrevealing-name-using-vim/: index.html
posts/2012-05-09-プログラマは詩人なのか魔法使いなのか/: index.html
posts/2012-05-11-filespecific-merge-resolution-in-git/: index.html
posts/2012-05-30-svn-postcommit-hook-email-file-owner/: index.html
posts/2012-06-05-git-alias-to-open-all-diffs-in-vim-tabs/: index.html
posts/2012-06-25-bash-oneliner-watch-a-filesize/: index.html
posts/2012-06-26-git-alias-to-amend-old-commits/: index.html
sass/: _custom-colors.scss  _kui.scss  _mplus-1c-thin.scss
slides/: 2014-09-06-equational-reasoning.html  2014-09-06-equational-reasoning.lhs
source/: index.html
source/_layouts/: post.html
stylesheets/: screen.css
tags/: .local.html  TaPL.html  alias.html  avahi.html  bash.html  bonjour.html  c++.html  c.html  code.html  equational-reasoning.html  ex.html  freebsd.html  functional-programming.html  generating this website.html  git-svn.html  git.html  gmail.html  graphs.html  hakyll.html  haskell.html  index.html  literate-programs.html  mac.html  maths.html  networking.html  new year.html  ogre.html  oneliners.html  pl.html  quotation.html  ruby.html  scripts.html  sed.html  shell.html  smtp.html  subversion.html  talks.html  version control.html  vim.html  visualisation.html  (+6 more)
templates/: archive.html  default.html  post-item.html  post.html  tags.html
(+298 files in other folders)
