name:                wright-access
version:             0.1.0.0
synopsis:            Personal website and blog
homepage:            dpwright.com
author:              Daniel P. Wright
maintainer:          dani@dpwright.com
copyright:           (c) 2012-2014 Daniel P. Wright
build-type:          Simple
cabal-version:       >=1.10

executable site
  main-is:             Main.lhs
  build-depends:       base >=4.6 && <4.8,
                       containers,
                       filepath,
                       hakyll,
                       hashable,
                       old-locale,
                       pandoc,
                       time
  hs-source-dirs:      pending-posts, posts
  default-language:    Haskell2010
  ghc-options:         -Wall

executable new-post
  main-is:             2013-06-03-literate-haskell-script-to-create-a-new-hakyll-post.lhs
  build-depends:       base >=4.6 && <4.8,
                       old-locale,
                       process,
                       time
  hs-source-dirs:      posts
  default-language:    Haskell2010

executable bl
  main-is:             2013-10-01-cross-posting-between-hakyll-and-wordpress.lhs
  build-depends:       base >=4.6 && <4.8,
                       BlogLiterately,
                       cmdargs,
                       directory,
                       lens,
                       mtl,
                       pandoc-types,
                       silently,
                       temporary,
                       split,
                       utf8-string
  hs-source-dirs:      pending-posts
  default-language:    Haskell2010

executable equationalReasoningExamples
  main-is:             2014-09-06-equational-reasoning.lhs
  build-depends:       base >=4.6 && <4.8,
                       mtl
  hs-source-dirs:      slides
  default-language:    Haskell2010

executable nengajou2015
  main-is:             2015-01-01-happy-new-year.lhs
  build-depends:       base >=4.7 && <4.8,
                       diagrams,
                       diagrams-lib,
                       diagrams-rasterific,
                       text,
                       directory,
                       filepath,
                       process,
                       SVGFonts
  hs-source-dirs:      pending-posts, posts
  default-language:    Haskell2010
