name:                wright-access
version:             0.1.0.0
synopsis:            Personal website and blog
homepage:            dpwright.com
author:              Daniel P. Wright
maintainer:          dani@dpwright.com
copyright:           (c) 2012-2015 Daniel P. Wright
build-type:          Simple
cabal-version:       >=1.10

flag site-only
  description: Only build the site itself, not the associated literate programs.
  default:     False

executable site
  main-is:             Main.lhs
  build-depends:       base >=4.6 && <4.10,
                       containers,
                       unordered-containers,
                       filepath,
                       -- `matchMetadata` was introduced in hakyll 4.6.4.0
                       hakyll >= 4.9.3.1,
                       aeson,
                       -- `hakyll watch` with versions of snap-core
                       -- earlier than 0.9.6.4 can't serve unicode paths
                       snap-core >= 0.9.6.4,
                       hashable,
                       old-locale,
                       pandoc,
                       pandoc-types,
                       time,
                       text,
                       split,
                       base-unicode-symbols
  hs-source-dirs:      pending-posts, posts
  default-language:    Haskell2010
  ghc-options:         -Wall
  other-modules:       Crossposting,
                       ElasticTabstops,
                       Feed,
                       Indexing,
                       OutdatedURLs,
                       Posts,
                       Slides

executable new-post
  main-is:             2013-06-03-literate-haskell-script-to-create-a-new-hakyll-post.lhs

  if flag(site-only)
    buildable: False
  else
    build-depends:     base >=4.6 && <4.8,
                       old-locale,
                       process,
                       time
  hs-source-dirs:      posts
  default-language:    Haskell2010

executable bl
  main-is:             2013-10-01-cross-posting-between-hakyll-and-wordpress.lhs

  if flag(site-only)
    buildable: False
  else
    build-depends:     base >=4.6 && <4.8,
                       BlogLiterately,
                       cmdargs,
                       directory,
                       lens,
                       mtl,
                       pandoc-types,
                       silently,
                       temporary,
                       split,
                       utf8-string
  hs-source-dirs:      pending-posts
  default-language:    Haskell2010

executable equationalReasoningExamples
  main-is:             2014-09-06-equational-reasoning.lhs

  if flag(site-only)
    buildable: False
  else
    build-depends:    base >=4.6 && <4.8,
                       mtl
  hs-source-dirs:      slides
  default-language:    Haskell2010

executable nengajou2015
  main-is:             2015-01-01-happy-new-year.lhs

  if flag(site-only)
    buildable: False
  else
    build-depends:     base >=4.7 && <4.8,
                       diagrams,
                       diagrams-lib,
                       diagrams-rasterific,
                       text,
                       directory,
                       filepath,
                       process,
                       vector-space < 0.9,
                       SVGFonts,
                       -- I don't use blaze-markup directly, but leaving the
                       -- version number unset causes lots of cabal issues
                       blaze-markup < 0.7
  hs-source-dirs:      pending-posts, posts
  default-language:    Haskell2010

executable glTutorial
  main-is: 2015-03-25-the-haskell-gl-package.lhs
  if flag(site-only)
    buildable: False
  else
    build-depends:     base                 >= 4.7 && <4.8,
                       base-unicode-symbols == 0.2.2.4,
                       transformers         == 0.4.3.0,
                       vector               == 0.10.12.2,
                       text                 == 1.2.0.3,
                       gl                   == 0.7.2.4,
                       GLFW-b               == 1.4.7.1,
                       linear               == 1.18.0.1,
                       distributive         == 0.4.4,
                       lens                 == 4.6.0.1,
                       JuicyPixels          == 3.2.3
  default-language:    Haskell2010
  hs-source-dirs:      pending-posts, posts
  if os(darwin)
    extra-libraries:     glfw3
  else
    extra-libraries:     glfw

--executable lambdaman
--  main-is:             2015-07-17-writing-a-zx-spectrum-game-in-haskell.lhs
--  hs-source-dirs:      posts
--  build-depends:       base >=4.7 && <4.10,
--                       bytestring,
--                       base-unicode-symbols,
--                       z80,
--                       zxspectrum
--  default-language:    Haskell2010
